client/src/assets/scss/Components/TablePlanningA.scss
.table-planning-container {
    margin-top: 10px;
    padding: 0px 10px 10px 10px;
    width: 180vh;
    height: 85vh;
    overflow-y: auto; 
    overflow-x: hidden;
    scrollbar-width: none;
    transition: scrollbar-color 0.3s ease;
    &::-webkit-scrollbar {
        width: 8px;
    }
    &::-webkit-scrollbar-thumb {
        background-color: rgba(0, 0, 0, 0.3);
        border-radius: 10px;
    }
    &::-webkit-scrollbar-track {
        background: transparent;
    }
    &:hover {
        scrollbar-width: thin; 
        scrollbar-color: rgba(0, 0, 0, 0.3) transparent; 
        &::-webkit-scrollbar {
            width: 8px;
        }
        &::-webkit-scrollbar-thumb {
            background-color: rgba(0, 0, 0, 0.5);
            border-radius: 10px;
        }
        &::-webkit-scrollbar-track {
            background: transparent;
        }
    }
    .table-planning {
      width: 100%;
      table {
        width: 100%;
        border-collapse: collapse;
        border: 1px solid black;
        @media only screen and (min-width: 1920px){
          height: 119vh;
        }
        .table-header-sticky{
          position: sticky;
          background-color: white;
          z-index: 2;
          top: -1px !important; // Need this to deal with padding on container so content does not reappear above header when scrolling
        }
        th, td {
          border: 1px solid #ddd;
          padding: 2px;
          text-align: right;
          font-size: 11.7px;
          &.indented-label {
            text-align: right;
            font-size: 12.6px;
            font-weight: bold;
          }
          &.no-indent {
            text-align: left;
            font-size: 12.6px;
            font-weight: bold;
          }
        }
        .input_tag{
          text-align: right;
          width: 67px;
        }
        th {
          white-space: nowrap;
        }
        
        td {
          white-space: nowrap;
        }
  
        .orange-txt {
          background-color: #fce5cd;
        }
  
        .light-txt {
          background-color: #c9daf8;
        }
  
        .sky-txt {
          background-color: #e0ffff
        }
  
        .total-txt {
          background-color: #daeef3;
        }
  
        .highlight {
          background-color: #f9f9f9;
        }
      }
    }
  }
  

